After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 381976 - crash when importing nzb file and previous path doesn't exist
crash when importing nzb file and previous path doesn't exist
Status: RESOLVED FIXED
Product: Pan
Classification: Other
Component: general
pre-1.0 betas
Other Linux
: Normal major
: 1.0
Assigned To: Charles Kerr
Pan QA Team
Depends on:
Blocks:
 
 
Reported: 2006-12-03 19:29 UTC by Charles Kerr
Modified: 2006-12-03 19:31 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Charles Kerr 2006-12-03 19:29:36 UTC


  • #0 strcmp
    from /lib/libc.so.6
  • #1 gtk_file_info_render_icon
    from /usr/lib/libgtk-x11-2.0.so.0
  • #2 gtk_file_chooser_button_new
    from /usr/lib/libgtk-x11-2.0.so.0
  • #3 fs_module_init
    from /usr/lib/gtk-2.0/2.10.0/filesystems/libgnome-vfs.so
  • #4 fs_module_init
    from /usr/lib/gtk-2.0/2.10.0/filesystems/libgnome-vfs.so
  • #5 fs_module_init
    from /usr/lib/gtk-2.0/2.10.0/filesystems/libgnome-vfs.so
  • #6 g_source_is_destroyed
    from /lib/libglib-2.0.so.0
  • #7 g_main_context_dispatch
    from /lib/libglib-2.0.so.0
  • #8 g_main_context_check
    from /lib/libglib-2.0.so.0
  • #9 g_main_loop_run
    from /lib/libglib-2.0.so.0
  • #10 gtk_dialog_run
    from /usr/lib/libgtk-x11-2.0.so.0
  • #11 get_save_attachments_path_from_user
    at gui.cc line 491
  • #12 pan::GUI::do_import_tasks
    at gui.cc line 553
  • #13 do_import_tasks
    at actions.cc line 115