http://bugzilla.gnome.org/show_bug.cgi?id=381976 Bug 381976 – crash when importing nzb file and previous path doesn't exist